# legalflow3

./: .gitignore  .pre-commit-config.yaml  README.md  deploy.md  package-lock.json  package.json  prompt_for_cursor.md  tasksofAWS.md  test-large-file.txt
.gemini/: errorinfomation.md
.github/workflows/: deploy.yml  performance.yml  security.yml
amplify/auth/: cognito-config.ts  iam-policies.ts  iam-roles.ts  rbac-service.ts  resource.ts  user-groups.ts
amplify/backend/: backend-config.ts
amplify/data/: auth-config.js  parties-schema.graphql  (+6 more)
backend/docgen_service/: .flake8  .pre-commit-config.yaml  Makefile  Pipfile  main.py  pyproject.toml
backend/docgen_service/app/: __init__.py  api.py  main.py  models.py
backend/docgen_service/app/services/: data_mapper.py  document_generator.py  pdf_extractor.py  template_manager.py
backend/docgen_service/app/utils/: auth.py  exceptions.py  gemini_client.py  image_processor.py  placeholder_replacer.py  template_processor.py  text_processor.py
contracts/: public_api.yaml
docs/: api-examples.md  api-specification.md  automated-testing-script.md  dashboard-database-design.md  deployment-guide.md  developer-guide.md  documents-database-design.md  dynamodb-design-specification.md  manual-testing-checklist.md  notifications-database-design.md  parties-database-design.md  quickstart.md  security-guide.md  timesheet-database-design.md  troubleshooting-guide.md  user-manual.md
frontend/: .gitignore  .prettierignore  eslint.config.mjs  next.config.ts  package-lock.json  package.json
scripts/: run-tests.bat  run-tests.sh
(+342 files in other folders)
